# boosty-downloader

./: .gitignore  LICENSE  Makefile  README.md  boosty-downloader  boosty-downloader.py  pyproject.toml
src/boosty_dl/: __init__.py  api.py  auth.py  cli.py  core.py  email.py  jellyfin.py  lock.py  media.py  plex.py  util.py
tests/: test_placeholder.py
